--- a/.storybook/styles/storybook-addon-grid.scss
+++ b/.storybook/styles/storybook-addon-grid.scss
@@ -1,7 +1,32 @@
 // storybook-addon-grid configurations
 :root {
-  --sb-grid-columns: 12; // grid columns count
-  --sb-grid-gap: 1.5rem; // grid gutter between columns
-  --sb-grid-gutter: 1.25rem; // grid padding-horizontal
-  --sb-grid-max-width: 100%;
+  --sb-grid-columns: 12; // grid columns count - get from src/utils/grid
+  --sb-grid-gap: 1.5rem; // grid gutter between columns - get from src/utils/grid
+  --sb-grid-gutter: 16px; // grid padding-horizontal - get from src/utils/grid
+  --sb-grid-max-width: 100%; // container max width -  - get from src/utils/grid
+}
+
+@media only screen and (min-width: 375px) {
+  :root {
+  --sb-grid-gutter: 1.25rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  :root {
+  --sb-grid-gutter: 2.5rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  :root {
+  --sb-grid-gutter: 3rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  :root {
+  --sb-grid-gutter: 3rem;
+  --sb-grid-max-width: 1140px;
+  }
 }
