:zap: enhance sb

--- a/.storybook/styles/storybook-addon-grid.scss
+++ b/.storybook/styles/storybook-addon-grid.scss
@@ -2,7 +2,7 @@
 :root {
   --sb-grid-columns: 12; // grid columns count - get from src/utils/grid
   --sb-grid-gap: 1.5rem; // grid gutter between columns - get from src/utils/grid
-  --sb-grid-gutter: 16px; // grid padding-horizontal - get from src/utils/grid
+  --sb-grid-gutter: 1rem; // grid padding-horizontal - get from src/utils/grid
   --sb-grid-max-width: 100%; // container max width -  - get from src/utils/grid
 }
 
